--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       # Label used to access the service container
       postgres:
         # Docker Hub image
-        # image: postgres
+        image: postgres
         # Provide the password for postgres
         env:
           CI: true
