--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,19 +57,17 @@ jobs:
         npm run migrate up
         npm run test
       env:
-        # The hostname used to communicate with the PostgreSQL service container
+        POSTGRES_PASSWORD: postgres
         POSTGRES_HOST: localhost
-        # The default PostgreSQL port
         POSTGRES_PORT: 5432
-        CI: true
-        PGHOST_TEST: ${{ secrets.PGHOST_TEST }}
-        PGUSER_TEST: ${{ secrets.PGUSER_TEST }}
-        PGDATABASE_TEST: ${{ secrets.PGDATABASE_TEST }}
-        PGPASSWORD_TEST: ${{ secrets.PGPASSWORD_TEST }}
-        PGPORT_TEST: ${{ secrets.PGPORT_TEST }}
-        PGHOST: ${{ secrets.PGHOST_TEST }}
-        PGUSER: ${{ secrets.PGUSER_TEST }}
-        PGDATABASE: ${{ secrets.PGDATABASE_TEST }}
-        PGPASSWORD: ${{ secrets.PGPASSWORD_TEST }}
-        PGPORT: ${{ secrets.PGPORT_TEST }}
+        PGHOST_TEST: localhost
+        PGUSER_TEST: postgres
+        PGDATABASE_TEST: postgres
+        PGPASSWORD_TEST: postgres
+        PGPORT_TEST: 5432
+        PGHOST: localhost
+        PGUSER: postgres
+        PGDATABASE: postgres
+        PGPASSWORD: postgres
+        PGPORT: 5432
         ACCESS_TOKEN_KEY: ${{ secrets.ACCESS_TOKEN_KEY }}
