--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,18 +23,6 @@ jobs:
         # Provide the password for postgres
         env:
           POSTGRES_PASSWORD: postgres
-          POSTGRES_HOST: localhost
-          POSTGRES_PORT: 5432
-          PGHOST_TEST: localhost
-          PGUSER_TEST: postgres
-          PGDATABASE_TEST: postgres
-          PGPASSWORD_TEST: postgres
-          PGPORT_TEST: 5432
-          PGHOST: localhost
-          PGUSER: postgres
-          PGDATABASE: postgres
-          PGPASSWORD: postgres
-          PGPORT: 5432
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
@@ -62,12 +50,12 @@ jobs:
         POSTGRES_PORT: 5432
         PGHOST_TEST: localhost
         PGUSER_TEST: postgres
-        PGDATABASE_TEST: postgres
+        PGDATABASE_TEST: forumapi
         PGPASSWORD_TEST: postgres
         PGPORT_TEST: 5432
         PGHOST: localhost
         PGUSER: postgres
-        PGDATABASE: postgres
+        PGDATABASE: forumapi
         PGPASSWORD: postgres
         PGPORT: 5432
         ACCESS_TOKEN_KEY: ${{ secrets.ACCESS_TOKEN_KEY }}
