--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,12 +50,12 @@ jobs:
         POSTGRES_PORT: 5432
         PGHOST_TEST: localhost
         PGUSER_TEST: postgres
-        PGDATABASE_TEST: forumapi
+        PGDATABASE_TEST: postgres
         PGPASSWORD_TEST: postgres
         PGPORT_TEST: 5432
         PGHOST: localhost
         PGUSER: postgres
-        PGDATABASE: forumapi
+        PGDATABASE: postgres
         PGPASSWORD: postgres
         PGPORT: 5432
         ACCESS_TOKEN_KEY: ${{ secrets.ACCESS_TOKEN_KEY }}
