--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,10 +10,11 @@ jobs:
     runs-on: ubuntu-latest
  
     steps:
-    - name: SSH and deploy app
     - uses: actions/checkout@v3
+    - name: SSH and deploy app
       run: |
         git config user.name "suwantosanjaya"
         git config user.email "suwantosanjaya@uin-suska.ac.id"
+    - uses: actions/checkout@v3
     - name: Deploy backend to Heroku
       run: git push heroku main:refs/heads/main --force
