--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,10 +11,8 @@ jobs:
  
     steps:
     - uses: actions/checkout@v3
-    - name: SSH and deploy app
-      run: |
-        git remote add heroku https://heroku:115f4d4a-4e10-496c-92a4-f8af7293068b@git.heroku.com/forum-api-v2.git
-        printf "release: npx node-pg-migrate up\nweb: bin/start-nginx npm start" > Procfile
-    - uses: actions/checkout@v3
-    - name: Deploy backend to Heroku
-      run: git push heroku master --force
+    - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: "115f4d4a-4e10-496c-92a4-f8af7293068b"
+          heroku_app_name: "forum-api-v2" #Must be unique in Heroku
+          heroku_email: "suwantosanjaya@uin-suska.ac.id"
