add cd action 7

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,6 +11,7 @@ jobs:
  
     steps:
     - uses: actions/checkout@v3
+    - name: SSH and deploy app
     - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: "115f4d4a-4e10-496c-92a4-f8af7293068b"
