add cd action 12

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,3 +32,8 @@ jobs:
         PGDATABASE: dbe0pv29niksjt
         PGPASSWORD: b9a5dee0aa48eb5d63d93df7038094037082f3ffdd6ecdf4fc6a208f8d263c58
         PGPORT: 5432
+        PGHOST_TEST: ec2-54-173-77-184.compute-1.amazonaws.com
+        PGUSER_TEST: dcdmwpxzrdnise
+        PGDATABASE_TEST: dbe0pv29niksjt
+        PGPASSWORD_TEST: b9a5dee0aa48eb5d63d93df7038094037082f3ffdd6ecdf4fc6a208f8d263c58
+        PGPORT_TEST: 5432
