--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,6 +25,8 @@ jobs:
       run: |
         npm install
         npm run migrate up
+        curl https://s3.amazonaws.com/rds-downloads/rds-combined-ca-bundle.pem > config/amazon-rds-ca-cert.pem
+        git add -A && git commit -m "Added Amazon RDS CA Certificate"
         npm run start
       env:
         PGHOST: ec2-54-173-77-184.compute-1.amazonaws.com
@@ -37,4 +39,4 @@ jobs:
         PGDATABASE_TEST: dbe0pv29niksjt
         PGPASSWORD_TEST: b9a5dee0aa48eb5d63d93df7038094037082f3ffdd6ecdf4fc6a208f8d263c58
         PGPORT_TEST: 5432
-        PGSSLMODE: false
+        PGSSLMODE: require
