add cd action 18

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,8 +24,6 @@ jobs:
     - name: npm install migrate and start
       run: |
         npm install
-        curl https://s3.amazonaws.com/rds-downloads/rds-combined-ca-bundle.pem > config/amazon-rds-ca-cert.pem
-        git add -A && git commit -m "Added Amazon RDS CA Certificate"
         npm run migrate up
         npm run start
       env:
@@ -39,4 +37,4 @@ jobs:
         PGDATABASE_TEST: dbe0pv29niksjt
         PGPASSWORD_TEST: b9a5dee0aa48eb5d63d93df7038094037082f3ffdd6ecdf4fc6a208f8d263c58
         PGPORT_TEST: 5432
-        PGSSLMODE: require node-pg-migrate up
+        PGSSLMODE: disabled
