--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,31 +9,17 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
  
-    steps:
-    - uses: actions/checkout@v3
-    - uses: akhileshns/heroku-deploy@v3.12.12 
+     steps:
+    - name: SSH and deploy app
+      uses: appleboy/ssh-action@master
       with:
-        heroku_api_key: "115f4d4a-4e10-496c-92a4-f8af7293068b"
-        heroku_app_name: "forum-api-v2" 
-        heroku_email: "suwantosanjaya@uin-suska.ac.id"
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: npm install migrate and start
-      run: |
-        npm install
-        npm run start
-      env:
-        PGHOST: ec2-54-173-77-184.compute-1.amazonaws.com
-        PGUSER: dcdmwpxzrdnise
-        PGDATABASE: dbe0pv29niksjt
-        PGPASSWORD: b9a5dee0aa48eb5d63d93df7038094037082f3ffdd6ecdf4fc6a208f8d263c58
-        PGPORT: 5432
-        PGHOST_TEST: ec2-54-173-77-184.compute-1.amazonaws.com
-        PGUSER_TEST: dcdmwpxzrdnise
-        PGDATABASE_TEST: dbe0pv29niksjt
-        PGPASSWORD_TEST: b9a5dee0aa48eb5d63d93df7038094037082f3ffdd6ecdf4fc6a208f8d263c58
-        PGPORT_TEST: 5432
-        PGSSLMODE: false
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
+        port: ${{ secrets.SSH_PORT }}
+        script: |
+          cd ~/forum-api
+          git pull origin master
+          npm install
+          npm run migrate up
+          pm2 restart auth-api
