--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Continuous Integration
+name: Continuous Integration (CI)
 
 on: 
   pull_request:
@@ -7,12 +7,12 @@ on:
 
 jobs:
 	test:
-    runs-on: ubuntu-latest
+		runs-on: ubuntu-latest
 
     strategy:
     	matrix:
-    		node-version: [16.x]
-    		# See supported Node.js release schedule at https://nodejs.org/en/about/releases/     
+				node-version: [16.x]
+				# See supported Node.js release schedule at https://nodejs.org/en/about/releases/     
 
     steps:
       - uses: actions/checkout@v3
@@ -22,21 +22,21 @@ jobs:
     	  	node-version: ${{ matrix.node-version }}
     	- name: npm install migrate and test
     	  run: |
-          npm install
-    		  npm run migrate up
-    		  npm run test
+					npm install
+					npm run migrate up
+					npm run test
     		env:
-    		 	CI: true
-    		 	PGHOST_TEST: ${{ secrets.PGHOST_TEST }}
-    		 	PGUSER_TEST: ${{ secrets.PGUSER_TEST }}
-    		 	PGDATABASE_TEST: ${{ secrets.PGDATABASE_TEST }}
-    		 	PGPASSWORD_TEST: ${{ secrets.PGPASSWORD_TEST }}
-    		 	PGPORT_TEST: ${{ secrets.PGPORT_TEST }}
-    		 	PGHOST: ${{ secrets.PGHOST }}
-    		 	PGUSER: ${{ secrets.PGUSER }}
-    		 	PGDATABASE: ${{ secrets.PGDATABASE }}
-    		 	PGPASSWORD: ${{ secrets.PGPASSWORD }}
-    		 	PGPORT: ${{ secrets.PGPORT }}
-    		 	ACCESS_TOKEN_KEY: ${{ secrets.ACCESS_TOKEN_KEY }}
-    		 	REFRESH_TOKEN_KEY: ${{ secrets.REFRESH_TOKEN_KEY }}
-          ACCCESS_TOKEN_AGE: ${{ secrets.ACCCESS_TOKEN_AGE }}
+					CI: true
+					PGHOST_TEST: ${{ secrets.PGHOST_TEST }}
+					PGUSER_TEST: ${{ secrets.PGUSER_TEST }}
+					PGDATABASE_TEST: ${{ secrets.PGDATABASE_TEST }}
+					PGPASSWORD_TEST: ${{ secrets.PGPASSWORD_TEST }}
+					PGPORT_TEST: ${{ secrets.PGPORT_TEST }}
+					PGHOST: ${{ secrets.PGHOST }}
+					PGUSER: ${{ secrets.PGUSER }}
+					PGDATABASE: ${{ secrets.PGDATABASE }}
+					PGPASSWORD: ${{ secrets.PGPASSWORD }}
+					PGPORT: ${{ secrets.PGPORT }}
+					ACCESS_TOKEN_KEY: ${{ secrets.ACCESS_TOKEN_KEY }}
+					REFRESH_TOKEN_KEY: ${{ secrets.REFRESH_TOKEN_KEY }}
+					ACCCESS_TOKEN_AGE: ${{ secrets.ACCCESS_TOKEN_AGE }}
